Tried to fix problems on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -78,8 +78,8 @@ nav {
     .burger{
         display: block;
         padding-bottom: 1rem;
-        padding-right: 100vw;
-        padding-left: 100vw;
+        padding-right: 50vw;
+        padding-left: 50vw;
     }
     
 }
